--- a/META.yml
+++ b/META.yml
@@ -3,15 +3,16 @@ abstract: 'A Perlish Interface to Solving ODEs using GSL v1.15+'
 author:
   - 'Joel Berger <joel.a.berger@gmail.com>'
 build_requires:
-  ExtUtils::CBuilder: 0
+  ExtUtils::CBuilder: '0'
 configure_requires:
-  Module::Build: 0.38
+  Alien::GSL: '1.00'
+  Module::Build: '0.38'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4211, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: PerlGSL-DiffEq
 no_index:
   file:
@@ -19,12 +20,12 @@ no_index:
 provides:
   PerlGSL::DiffEq:
     file: lib/PerlGSL/DiffEq.pm
-    version: 0.08
+    version: 0.080_001
 requires:
-  parent: 0
-  perl: 5.008
+  parent: '0'
+  perl: '5.008'
 resources:
   bugtracker: http://github.com/jberger/PerlGSL-DiffEq/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/jberger/PerlGSL-DiffEq
-version: 0.08
+version: 0.080_001
